Add census link

--- a/Allegheny County Census Tract GEOID.ipynb
+++ b/Allegheny County Census Tract GEOID.ipynb
@@ -18,6 +18,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-04T23:38:03.579202Z",
+     "start_time": "2019-03-04T23:38:03.575549Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "if not os.path.exists('data'):\n",
+    "    os.makedirs('data')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Download Census Tracts from [US Census](https://www.census.gov/geo/maps-data/data/cbf/cbf_tracts.html) and unzip at data folder."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
@@ -382,27 +405,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-03-04T03:19:47.571689Z",
-     "start_time": "2019-03-04T03:19:47.567595Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# from shapely import geometry\n",
-    "# upcast_dispatch = {geometry.Point: geometry.MultiPoint, \n",
-    "#                    geometry.LineString: geometry.MultiLineString, \n",
-    "#                    geometry.Polygon: geometry.MultiPolygon}\n",
-    "\n",
-    "# def maybe_cast_to_multigeometry(geom):\n",
-    "#     caster = upcast_dispatch.get(type(geom), lambda x: x[0])\n",
-    "#     return caster([geom])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 82,
    "metadata": {
     "ExecuteTime": {
@@ -683,29 +685,16 @@
   },
   "toc": {
    "base_numbering": 1,
-   "colors": {
-    "hover_highlight": "#DAA520",
-    "navigate_num": "#000000",
-    "navigate_text": "#333333",
-    "running_highlight": "#FF0000",
-    "selected_highlight": "#FFD700",
-    "sidebar_border": "#EEEEEE",
-    "wrapper_background": "#FFFFFF"
-   },
-   "moveMenuLeft": true,
    "nav_menu": {},
-   "navigate_menu": true,
    "number_sections": false,
    "sideBar": false,
    "skip_h1_title": false,
-   "threshold": 4,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": false,
-   "toc_window_display": false,
-   "widenNotebook": false
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
